--- a/site.html
+++ b/site.html
@@ -498,7 +498,7 @@
     <!-- Header Section -->
     <header>
         <div class="container header-content">
-            <img src="D:/Personal/Projects/roy_porfolio/roy_profile.jpg" alt="Roy Lennic Mwavita" class="profile-img">
+            <img src="https://raw.githubusercontent.com/roy-mwavita0/portfolio/main/roy_profile.jpg" alt="Roy Lennic Mwavita" class="profile-img">
             <div class="header-text">
                 <h1>Roy Lennic Mwavita</h1>
                 <p>MEAL Officer | Data Analytics</p>
